--- a/UserHub.API/appsettings.json
+++ b/UserHub.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UserHubConnection": "Server=.\\SQLEXPRESS;Database=UserHub;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
