--- a/UserHub.API/appsettings.json
+++ b/UserHub.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UserHubConnection": "Server=.\\SQLEXPRESS;Database=UserHub;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "JDdkldfklds398dijfi89hiHUIHIOIPHODSHF98E8OIJFl",
+    "Issuer": "https://localhost:7273",
+    "Audience": "https://localhost:7273",
+    "ExpiryInDays": 3
   }
 }
