--- a/UserHub.API/appsettings.json
+++ b/UserHub.API/appsettings.json
@@ -10,9 +10,9 @@
     "UserHubConnection": "Server=.\\SQLEXPRESS;Database=UserHub;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "JDdkldfklds398dijfi89hiHUIHIOIPHODSHF98E8OIJFl",
+    "SecretKey": "aj0e9s8urAdsfjLf0ad0r9utredsfgstr5e6",
     "Issuer": "https://localhost:7273",
     "Audience": "https://localhost:7273",
-    "ExpiryInDays": 3
+    "TokenExpiryInDays": 3
   }
 }
