update cros policy

--- a/UserHub.API/appsettings.json
+++ b/UserHub.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserHubConnection": "Server=.\\SQLEXPRESS;Database=UserHub;Trusted_Connection=True;TrustServerCertificate=True;"
+    "UserHubConnection": "workstation id=UserHub.mssql.somee.com;packet size=4096;user id=enayet329_SQLLogin_1;pwd=7k9eeez9pz;data source=UserHub.mssql.somee.com;persist security info=False;initial catalog=UserHub;TrustServerCertificate=True"
   },
   "Jwt": {
     "SecretKey": "aj0e9s8urAdsfjLf0ad0r9utredsfgstr5e6",
